add models for notifications and events
