# backend/docs/swagger.json
@@ -245,6 +245,40 @@
                 }
             }
         },
+        "/team/inviteUser": {
+            "post": {
+                "description": "Invite user to team",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "team"
+                ],
+                "operationId": "inviteUser",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/InviteUserToTeamRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Team"
+                        }
+                    }
+                }
+            }
+        },
         "/user/authenticate": {
             "post": {
                 "description": "Authenticate user using username and password",
@@ -438,6 +472,17 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "InviteUserToTeamRequest": {
+            "type": "object",
+            "properties": {
+                "teamId": {
                     "type": "string"
                 },
                 "userId": {
